// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`introspection > getFields() > returns list of type fields 1`] = `
"[
  {
    "name": "createTweet",
    "type": "Tweet",
    "args": [
      "input",
      "content"
    ]
  },
  {
    "name": "deleteTweet",
    "type": "Tweet",
    "args": [
      "id"
    ]
  },
  {
    "name": "markTweetRead",
    "type": "Boolean",
    "args": [
      "id"
    ]
  }
]"
`;

exports[`introspection > getOperation() > returns list of mutations 1`] = `
"{
  "createTweet": {
    "name": "createTweet",
    "type": "Tweet",
    "args": [
      "input",
      "content"
    ]
  },
  "deleteTweet": {
    "name": "deleteTweet",
    "type": "Tweet",
    "args": [
      "id"
    ]
  },
  "markTweetRead": {
    "name": "markTweetRead",
    "type": "Boolean",
    "args": [
      "id"
    ]
  }
}"
`;

exports[`introspection > getOperation() > returns list of queries 1`] = `
"{
  "Tweet": {
    "name": "Tweet",
    "type": "Tweet",
    "args": [
      "id"
    ]
  },
  "Tweets": {
    "name": "Tweets",
    "type": "[Tweet]!",
    "args": [
      "limit",
      "skip",
      "sort_field",
      "sort_order"
    ]
  },
  "TweetsMeta": {
    "name": "TweetsMeta",
    "type": "Meta",
    "args": [],
    "deprecationReason": "No longer supported"
  },
  "User": {
    "name": "User",
    "type": "User",
    "args": [
      "id"
    ],
    "deprecationReason": "Use \`Users\`."
  },
  "Users": {
    "name": "Users",
    "type": "[User]!",
    "args": [
      "id"
    ]
  },
  "NotificationsMeta": {
    "name": "NotificationsMeta",
    "type": "Meta",
    "args": [],
    "deprecationReason": "No longer supported"
  }
}"
`;

exports[`introspection > getOperation() > returns list of subscriptions 1`] = `
"{
  "Notifications": {
    "name": "Notifications",
    "type": "[Notification]!",
    "args": [
      "limit"
    ]
  }
}"
`;

exports[`introspection > getSchemaMap() > returns {} if root type no declared (issue #802) 1`] = `
"{
  "queries": {
    "posts": {
      "name": "posts",
      "type": "[Post]",
      "args": [],
      "description": "Fetch all posts without any arguments. Default order is funky."
    }
  },
  "mutations": {
    "upvotePost": {
      "name": "upvotePost",
      "type": "Post",
      "args": [
        "postId"
      ],
      "description": "Upvote a post given the identifier. Once upvoted, it can't be downvoted anymore."
    }
  },
  "subscriptions": {},
  "directives": {
    "include": "@include",
    "skip": "@skip",
    "deprecated": "@deprecated",
    "specifiedBy": "@specifiedBy",
    "oneOf": "@oneOf"
  },
  "objects": {
    "Author": "Author",
    "Post": "Post"
  },
  "unions": {},
  "interfaces": {},
  "enums": {},
  "inputs": {},
  "scalars": {
    "ID": "ID",
    "String": "String",
    "Int": "Int",
    "Boolean": "Boolean"
  }
}"
`;

exports[`introspection > getSchemaMap() > returns schema types map 1`] = `
"{
  "queries": {
    "Tweet": {
      "name": "Tweet",
      "type": "Tweet",
      "args": [
        "id"
      ]
    },
    "Tweets": {
      "name": "Tweets",
      "type": "[Tweet]!",
      "args": [
        "limit",
        "skip",
        "sort_field",
        "sort_order"
      ]
    },
    "TweetsMeta": {
      "name": "TweetsMeta",
      "type": "Meta",
      "args": [],
      "deprecationReason": "No longer supported"
    },
    "User": {
      "name": "User",
      "type": "User",
      "args": [
        "id"
      ],
      "deprecationReason": "Use \`Users\`."
    },
    "Users": {
      "name": "Users",
      "type": "[User]!",
      "args": [
        "id"
      ]
    },
    "NotificationsMeta": {
      "name": "NotificationsMeta",
      "type": "Meta",
      "args": [],
      "deprecationReason": "No longer supported"
    }
  },
  "mutations": {
    "createTweet": {
      "name": "createTweet",
      "type": "Tweet",
      "args": [
        "input",
        "content"
      ]
    },
    "deleteTweet": {
      "name": "deleteTweet",
      "type": "Tweet",
      "args": [
        "id"
      ]
    },
    "markTweetRead": {
      "name": "markTweetRead",
      "type": "Boolean",
      "args": [
        "id"
      ]
    }
  },
  "subscriptions": {
    "Notifications": {
      "name": "Notifications",
      "type": "[Notification]!",
      "args": [
        "limit"
      ]
    }
  },
  "directives": {
    "noDoc": "@noDoc",
    "include": "@include",
    "skip": "@skip",
    "deprecated": "@deprecated",
    "specifiedBy": "@specifiedBy",
    "oneOf": "@oneOf"
  },
  "objects": {
    "Media": "Media",
    "Tweet": "Tweet",
    "User": "User",
    "Stat": "Stat",
    "Notification": "Notification",
    "Meta": "Meta"
  },
  "unions": {},
  "interfaces": {
    "Node": "Node"
  },
  "enums": {
    "MediaType": "MediaType"
  },
  "inputs": {
    "TweetContent": "TweetContent"
  },
  "scalars": {
    "SRI": "SRI",
    "ID": "ID",
    "String": "String",
    "Int": "Int",
    "Url": "Url",
    "Date": "Date",
    "Boolean": "Boolean"
  }
}"
`;

exports[`introspection > getSchemaMap() > returns schema types map with custom root types 1`] = `
"{
  "queries": {
    "allSubscription": {
      "name": "allSubscription",
      "type": "[Subscription]",
      "args": [
        "after",
        "first",
        "before",
        "last"
      ]
    },
    "subscription": {
      "name": "subscription",
      "type": "Subscription",
      "args": [
        "id"
      ]
    }
  },
  "mutations": {},
  "subscriptions": {},
  "directives": {
    "include": "@include",
    "skip": "@skip",
    "deprecated": "@deprecated",
    "specifiedBy": "@specifiedBy",
    "oneOf": "@oneOf"
  },
  "objects": {
    "Subscription": "Subscription"
  },
  "unions": {},
  "interfaces": {},
  "enums": {},
  "inputs": {},
  "scalars": {
    "String": "String",
    "ID": "ID",
    "Int": "Int",
    "Boolean": "Boolean"
  }
}"
`;

exports[`introspection > getSchemaMap() > returns schema types map with defined root types 1`] = `
"{
  "queries": {
    "someField": {
      "name": "someField",
      "type": "String",
      "args": []
    }
  },
  "mutations": {
    "setSomeField": {
      "name": "setSomeField",
      "type": "String",
      "args": [
        "to"
      ]
    }
  },
  "subscriptions": {},
  "directives": {
    "include": "@include",
    "skip": "@skip",
    "deprecated": "@deprecated",
    "specifiedBy": "@specifiedBy",
    "oneOf": "@oneOf"
  },
  "objects": {},
  "unions": {},
  "interfaces": {},
  "enums": {},
  "inputs": {},
  "scalars": {
    "String": "String",
    "Boolean": "Boolean"
  }
}"
`;

exports[`introspection > getTypeFromSchema() > handles null types from introspection JSON 1`] = `
"{
  "ID": "ID",
  "String": "String",
  "Int": "Int",
  "Boolean": "Boolean"
}"
`;

exports[`introspection > getTypeFromSchema() > returns a filter map filtered by GraphQLEnumType 1`] = `
"{
  "MediaType": "MediaType"
}"
`;

exports[`introspection > getTypeFromSchema() > returns a filter map filtered by GraphQLInputObjectType 1`] = `
"{
  "TweetContent": "TweetContent"
}"
`;

exports[`introspection > getTypeFromSchema() > returns a filter map filtered by GraphQLInterfaceType 1`] = `
"{
  "Node": "Node"
}"
`;

exports[`introspection > getTypeFromSchema() > returns a filter map filtered by GraphQLObjectType 1`] = `
"{
  "Media": "Media",
  "Tweet": "Tweet",
  "User": "User",
  "Stat": "Stat",
  "Notification": "Notification",
  "Meta": "Meta"
}"
`;

exports[`introspection > getTypeFromSchema() > returns a filter map filtered by GraphQLScalarType 1`] = `
"{
  "SRI": "SRI",
  "ID": "ID",
  "String": "String",
  "Int": "Int",
  "Url": "Url",
  "Date": "Date",
  "Boolean": "Boolean"
}"
`;

exports[`introspection > getTypeFromSchema() > returns a filter map filtered by GraphQLUnionType 1`] = `"{}"`;
